--- a/index.html
+++ b/index.html
@@ -24,6 +24,18 @@
 	<script type="text/javascript" src="pixi.min.js"></script>
 </head>
 <body>
-	<canvas id="canvas"></canvas>
+    <script>
+        //Create the renderer
+        var renderer = PIXI.autoDetectRenderer(256, 256);
+
+        //Add the canvas to the HTML document
+        document.body.appendChild(renderer.view);
+
+        //Create a container object called the `stage`
+        var stage = new PIXI.Container();
+
+        //Tell the `renderer` to `render` the `stage`
+        renderer.render(stage);
+    </script>
 </body>
 </html>
