Fit canvas to window

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
     <script>
         //Create the renderer
-        var renderer = PIXI.autoDetectRenderer(256, 256);
+        var renderer = PIXI.autoDetectRenderer(window.innerWidth, window.innerHeight);
 
         //Add the canvas to the HTML document
         document.body.appendChild(renderer.view);
