Load ship.png and create a sprite from it

--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
 
         //Tell the `renderer` to `render` the `stage`
         renderer.render(stage);
+
+        PIXI.loader
+            .add("ship.png")
+            .load(setup);
+
+        function setup() {
+            var sprite = new PIXI.Sprite(PIXI.loader.resources["ship.png"].texture);
+        }
     </script>
 </body>
 </html>
