--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         function setup() {
             // setup ship sprite
             var sprite = new PIXI.Sprite(PIXI.loader.resources["ship.png"].texture);
+            sprite.anchor.set(0.5, 0.5);
             stage.addChild(sprite);
             
             // render the game
