--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         var stage = new PIXI.Container();
         var renderer = PIXI.autoDetectRenderer(window.innerWidth, window.innerHeight);
         document.body.appendChild(renderer.view);
+        var sprite;
 
         PIXI.loader
             .add("ship.png")
@@ -35,13 +36,24 @@
 
         function setup() {
             // setup ship sprite
-            var sprite = new PIXI.Sprite(PIXI.loader.resources["ship.png"].texture);
+            sprite = new PIXI.Sprite(PIXI.loader.resources["ship.png"].texture);
             sprite.anchor.set(0.5, 0.5);
             stage.addChild(sprite);
             
-            // render the game
+            // start the game
+            gameLoop();
+        }
+
+        function gameLoop() {
+            requestAnimationFrame(gameLoop);
+
+            sprite.x += 1;
+
+            // render the frame
             renderer.render(stage);
         }
+
+        
     </script>
 </body>
 </html>
