--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
             // setup ship sprite
             sprite = new PIXI.Sprite(PIXI.loader.resources["ship.png"].texture);
             sprite.anchor.set(0.5, 0.5);
+            sprite.vx = 0;
+            sprite.vy = 0;
             stage.addChild(sprite);
             
             // start the game
@@ -47,7 +49,11 @@
         function gameLoop() {
             requestAnimationFrame(gameLoop);
 
-            sprite.x += 1;
+            sprite.vx = 1;
+            sprite.vy = 1;
+            
+            sprite.x += sprite.vx;
+            sprite.y += sprite.vy;
 
             // render the frame
             renderer.render(stage);
