Let arrow keys move ship

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         var stage = new PIXI.Container();
         var renderer = PIXI.autoDetectRenderer(window.innerWidth, window.innerHeight);
         document.body.appendChild(renderer.view);
-        var sprite, state;
+        var sprite, state, left, up, right, down;
 
         PIXI.loader
             .add("ship.png")
@@ -41,6 +41,12 @@
             sprite.vx = 0;
             sprite.vy = 0;
             stage.addChild(sprite);
+
+            // capture keyboard input
+            left = keyboard(37);
+            up = keyboard(38);
+            right = keyboard(39);
+            down = keyboard(40);
 
             // set game state
             state = play;
@@ -56,13 +62,61 @@
         }
 
         function play() {
-            sprite.vx = 1;
-            sprite.vy = 1;
+            var speed = 1;
+
+            // update horizontal velocity
+            if(left.isDown && !right.isDown) {
+                sprite.vx = -speed;
+            } else if(right.isDown && !left.isDown) {
+                sprite.vx = speed;
+            } else {
+                sprite.vx = 0;
+            }
+            
+            // update vertical velocity
+            if(up.isDown && !down.isDown) {
+                sprite.vy = -speed;
+            } else if(down.isDown && !up.isDown) {
+                sprite.vy = speed;
+            } else {
+                sprite.vy = 0;
+            }
+
             sprite.x += sprite.vx;
             sprite.y += sprite.vy;
         }
 
-        
+        function keyboard(keyCode) {
+            var key = {};
+            key.code = keyCode;
+            key.isDown = false;
+            key.isUp = true;
+            key.press = undefined;
+            key.release = undefined;
+
+            key.downHandler = function (event) {
+                if (event.keyCode === key.code) {
+                    if (key.isUp && key.press) key.press();
+                    key.isDown = true;
+                    key.isUp = false;
+                }
+                event.preventDefault();
+            };
+
+            key.upHandler = function (event) {
+                if (event.keyCode === key.code) {
+                    if (key.isDown && key.release) key.release();
+                    key.isDown = false;
+                    key.isUp = true;
+                }
+                event.preventDefault();
+            };
+
+            window.addEventListener("keydown", key.downHandler.bind(key), false);
+            window.addEventListener("keyup", key.upHandler.bind(key), false);
+            return key;
+        }
+
     </script>
 </body>
 </html>
