Fix particle positioning

--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
                 particle.beginFill(0xCCCCCC);
                 particle.drawRect(0, 0, size, size);
                 particle.endFill();
-                particle.x = sprite.x + Math.random() * 4;
-                particle.y = sprite.y + Math.random() * 4;
+                particle.x = sprite.x-2 + Math.random() * 4;
+                particle.y = sprite.y-2 + Math.random() * 4;
                 particle.scale.set(2);
                 particle.pivot.set(size/2);
                 particle.zIndex = 0;
