--- a/index.html
+++ b/index.html
@@ -64,21 +64,19 @@
                 }
             }
 
-            // generate particles
-            for( var i=0; i<1; i++) {
-                var size = 8;
-                var particle = new PIXI.Graphics();
-                particle.beginFill(0xCCCCCC);
-                particle.drawRect(0, 0, size, size);
-                particle.endFill();
-                particle.x = sprite.x-2 + Math.random() * 4;
-                particle.y = sprite.y-2 + Math.random() * 4;
-                particle.scale.set(2);
-                particle.pivot.set(size/2);
-                particle.zIndex = 0;
-                particles.push(particle);
-                stage.addChild(particle);
-            }
+            // generate a particle
+            var size = 8;
+            var particle = new PIXI.Graphics();
+            particle.beginFill(0xCCCCCC);
+            particle.drawRect(0, 0, size, size);
+            particle.endFill();
+            particle.x = sprite.x-2 + Math.random() * 4;
+            particle.y = sprite.y-2 + Math.random() * 4;
+            particle.scale.set(2);
+            particle.pivot.set(size/2);
+            particle.zIndex = 0;
+            particles.push(particle);
+            stage.addChild(particle);
 
             // sort draw order by zIndex
             stage.children.sort(function(a,b) {
