--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             particle.endFill();
             particle.x = sprite.x-2 + Math.random() * 4;
             particle.y = sprite.y-2 + Math.random() * 4;
-            particle.scale.set(2);
+            particle.scale.set(scale);
             particle.pivot.set(size/2);
             particle.zIndex = 0;
             particles.push(particle);
