--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 }
             }
 
-            // generate a particle
+            // generate particle
             var size = 8;
             var particle = new PIXI.Graphics();
             particle.beginFill(0xCCCCCC);
