--- a/index.html
+++ b/index.html
@@ -97,7 +97,9 @@
             }
 
             // rotate ship to face moving direction
-            sprite.rotation = Math.atan2(sprite.vy, sprite.vx);
+            if(sprite.vx !== 0 || sprite.vy !== 0) {
+                sprite.rotation = Math.atan2(sprite.vy, sprite.vx);
+            }            
 
             sprite.x += sprite.vx;
             sprite.y += sprite.vy;
