Add support for touch devices

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 
             // capture mouse input
             renderer.view.addEventListener('mousemove', mousemove, false );
+            renderer.view.addEventListener('touchstart', mousemove, false);
+            renderer.view.addEventListener('touchmove', mousemove, false);
             mouse = { x: 0, y: 0 };
 
             particles = [];
