Remove unused variable and add missing variable

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             .add("meteor.png")
             .load(setup);
 
-        var scale, ship, state, particles, mouse;
+        var ship, particles, meteors, mouse, state;
 
         // setup game
         function setup() {
