Remove unused variable

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             .add("meteor.png")
             .load(setup);
 
-        var ship, particles, meteors, state;
+        var ship, particles, meteors;
 
         // setup game
         function setup() {
